tests/fixtures/fail/no-arrow-functions.ts
// Violates: no-arrow-functions
export const double = (n: number) => n * 2
